force-app/main/default/objects/Card_Device__c/Card_Device__c.object-meta.xml
<CustomObject>
    <label>כרטיס מכשיר</label>
    <nameField>
        <displayFormat>DEV-{000000000}</displayFormat>
        <label>מכשיר</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>כרטיס מכשיר</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>