force-app/main/default/objects/Card_Device__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>כרטיס מכשיר</relationshipLabel>
    <relationshipName>Card_Device</relationshipName>
    <type>Lookup</type>
</CustomField>