force-app/main/default/objects/Card_Device__c/fields/activation__c.field-meta.xml
<CustomField>
    <fullName>activation__c</fullName>
    <label>אקטיבציה</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>לא אקטיבי</fullName>
            </value>
            <value>
                <fullName>אקטיבי</fullName>
            </value>
            <value>
                <fullName>מושהה</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>