force-app/main/default/objects/Card_Device__c/fields/auth_code__c.field-meta.xml
<CustomField>
    <fullName>auth_code__c</fullName>
    <label>auth code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>