force-app/main/default/objects/Card_Device__c/fields/DealDevice__c.field-meta.xml
<CustomField>
    <fullName>DealDevice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>כרטיס עסקה</label>
    <referenceTo>Transaction_Card__c</referenceTo>
    <relationshipLabel>כרטיס מכשיר</relationshipLabel>
    <relationshipName>DeviceCard</relationshipName>
    <type>Lookup</type>
</CustomField>