force-app/main/default/objects/Card_Device__c/fields/Defect__c.field-meta.xml
<CustomField>
    <fullName>Defect__c</fullName>
    <label>סוג תקלה</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>כפתורים</fullName>
            </value>
            <value>
                <fullName>שליחת הודעה</fullName>
            </value>
            <value>
                <fullName>סוללה</fullName>
            </value>
            <value>
                <fullName>מסך</fullName>
            </value>
            <value>
                <fullName>אחר</fullName>
            </value>
            <value>
                <fullName>אצל חיליק</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>