force-app/main/default/objects/Card_Device__c/fields/DeviceLocation__c.field-meta.xml
<CustomField>
    <fullName>DeviceLocation__c</fullName>
    <label>תפוצה בבתי עסק</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>מגנוס</fullName>
                <default>true</default>
                <label>מגנוס</label>
            </value>
            <value>
                <fullName>בית חב&quot;ד קטמנדו</fullName>
            </value>
            <value>
                <fullName>מחלצים</fullName>
            </value>
            <value>
                <fullName>נפאל</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>