force-app/main/default/objects/Card_Device__c/fields/IMEI__c.field-meta.xml
<CustomField>
    <fullName>IMEI__c</fullName>
    <description>מס&apos; IMEI</description>
    <label>IMEI</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>