force-app/main/default/objects/Card_Device__c/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <label>מלאי</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>במלאי</fullName>
                <color>#33FF33</color>
                <label>במלאי</label>
            </value>
            <value>
                <fullName>לא במלאי</fullName>
            </value>
            <value>
                <fullName>אצל לקוח</fullName>
                <isActive>false</isActive>
                <label>אצל לקוח</label>
            </value>
            <value>
                <fullName>הוחזר</fullName>
                <isActive>false</isActive>
                <label>הוחזר</label>
            </value>
            <value>
                <fullName>מוכן ללקוח</fullName>
                <isActive>false</isActive>
                <label>מוכן ללקוח</label>
            </value>
            <value>
                <fullName>נגרע</fullName>
                <isActive>false</isActive>
                <label>נגרע</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>