force-app/main/default/objects/Card_Device__c/fields/Label_sticker__c.field-meta.xml
<CustomField>
    <fullName>Label_sticker__c</fullName>
    <label>מדבקת סימון</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ללא</fullName>
                <default>true</default>
                <label>ללא</label>
            </value>
            <value>
                <fullName>צהוב</fullName>
            </value>
            <value>
                <fullName>כתום</fullName>
            </value>
            <value>
                <fullName>ירוק</fullName>
            </value>
            <value>
                <fullName>ורוד</fullName>
            </value>
            <value>
                <fullName>אדום</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>