force-app/main/default/objects/Card_Device__c/fields/model__c.field-meta.xml
<CustomField>
    <fullName>model__c</fullName>
    <label>דגם</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
            <value>
                <fullName>SE+</fullName>
            </value>
            <value>
                <fullName>GO</fullName>
            </value>
            <value>
                <fullName>SAT_Phone</fullName>
            </value>
            <value>
                <fullName>Mini</fullName>
            </value>
            <value>
                <fullName>סים לוויני</fullName>
            </value>
            <value>
                <fullName>MINI 2</fullName>
            </value>
            <value>
                <fullName>GPS MAP 66i</fullName>
            </value>
            <value>
                <fullName>Messenger</fullName>
            </value>
            <value>
                <fullName>דגמים</fullName>
                <isActive>false</isActive>
                <label>דגמים</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>