force-app/main/default/objects/Card_Device__c/fields/network__c.field-meta.xml
<CustomField>
    <fullName>network__c</fullName>
    <inlineHelpText>באיזו מערכת לווינית מנוהל המכשיר</inlineHelpText>
    <label>מערכת</label>
    <length>255</length>
    <type>Text</type>
</CustomField>