force-app/main/default/objects/Card_Device__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <label>מספר</label>
    <length>17</length>
    <type>Text</type>
</CustomField>