force-app/main/default/objects/Card_Device__c/fields/Registered_Unregistered__c.field-meta.xml
<CustomField>
    <fullName>Registered_Unregistered__c</fullName>
    <label>רשום/לא רשום</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>רשום</fullName>
            </value>
            <value>
                <fullName>לא רשום</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>