force-app/main/default/objects/Card_Device__c/fields/Satdesk__c.field-meta.xml
<CustomField>
    <fullName>Satdesk__c</fullName>
    <label>Satdesk</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>