force-app/main/default/objects/Card_Device__c/fields/Short_IMEI__c.field-meta.xml
<CustomField>
    <fullName>Short_IMEI__c</fullName>
    <formula>RIGHT(IMEI__c , 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Short IMEI</label>
    <type>Text</type>
</CustomField>