force-app/main/default/objects/Card_Device__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>מצב</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>לתיקון</fullName>
            </value>
            <value>
                <fullName>מושבת</fullName>
            </value>
            <value>
                <fullName>נגנב</fullName>
            </value>
            <value>
                <fullName>פרזנטור</fullName>
            </value>
            <value>
                <fullName>מוכן ללקוח</fullName>
                <default>true</default>
                <label>מוכן ללקוח</label>
            </value>
            <value>
                <fullName>אצל לקוח</fullName>
            </value>
            <value>
                <fullName>תקין</fullName>
            </value>
            <value>
                <fullName>לבדיקה</fullName>
            </value>
            <value>
                <fullName>הוחזר</fullName>
                <isActive>false</isActive>
                <label>הוחזר</label>
            </value>
            <value>
                <fullName>נגרע</fullName>
                <isActive>false</isActive>
                <label>נגרע</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>