force-app/main/default/objects/Card_Device__c/fields/System_Name__c.field-meta.xml
<CustomField>
    <fullName>System_Name__c</fullName>
    <label>שם במערכת</label>
    <length>255</length>
    <type>Text</type>
</CustomField>