force-app/main/default/objects/Card_Device__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IMEI__c</columns>
    <columns>model__c</columns>
    <columns>Inventory__c</columns>
    <columns>status__c</columns>
    <columns>Repair__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>10/1/2023 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>