force-app/main/default/objects/Card_Device__c/listViews/Habad.listView-meta.xml
<ListView>
    <fullName>Habad</fullName>
    <columns>NAME</columns>
    <columns>model__c</columns>
    <columns>IMEI__c</columns>
    <columns>DeviceLocation__c</columns>
    <columns>Satdesk__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DeviceLocation__c</field>
        <operation>equals</operation>
        <value>בית חב&quot;ד קטמנדו</value>
    </filters>
    <label>מכשירים אצל חבד</label>
    <language>en_US</language>
</ListView>