force-app/main/default/objects/Card_Device__c/listViews/prepared.listView-meta.xml
<ListView>
    <fullName>prepared</fullName>
    <columns>NAME</columns>
    <columns>Inventory__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Inventory__c</field>
        <operation>equals</operation>
        <value>מוכן ללקוח</value>
    </filters>
    <label>מוכן ללקוח</label>
    <language>en_US</language>
</ListView>