force-app/main/default/objects/Card_Device__c/listViews/SE_Plus.listView-meta.xml
<ListView>
    <fullName>SE_Plus</fullName>
    <columns>NAME</columns>
    <columns>model__c</columns>
    <columns>IMEI__c</columns>
    <columns>Inventory__c</columns>
    <columns>Satdesk__c</columns>
    <columns>auth_code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>model__c</field>
        <operation>equals</operation>
        <value>SE+</value>
    </filters>
    <label>SE_Plus</label>
    <language>en_US</language>
</ListView>