force-app/main/default/objects/Card_Device__c/listViews/View.listView-meta.xml
<ListView>
    <fullName>View</fullName>
    <columns>NAME</columns>
    <columns>status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>status__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Inventory__c</field>
        <operation>equals</operation>
        <value>לא במלאי</value>
    </filters>
    <label>דק</label>
    <language>en_US</language>
</ListView>